# dingtalk_bot

./: .cursorignore  .dockerignore  Dockerfile  LICENSE  manage.py  pyproject.toml  requirements.txt
core/: RedisDataResponse.py  ignore_health_log_filter.py  redis_client.py
customRobot/: EchoMarkdownHandler.py  __init__.py  apps.py  delete_key.py  no-ttl.py  urls.py  views.py
customRobot/interface_views/: receive_stream_request.py
data/: receive_stream_callback.json
dingtalk/: Card.py  Card2.py  CardData.py  CardDataStore.py  CardException.py  DingtalkBase.py  Dingtalk_Base.py  HttpxCustomBearerAuth.py  PrivateCardData.py  WatchJobStatus.py  __init__.py  apps.py  cardData.py  celery_app.py
dingtalk/Models/: CardRepository.py  dingtalk_card_struct.py  request_data_model.py  workflow_output_parameters_model.py  workflow_task_status_model.py
dingtalk/Schema/: APISchema.py  dingtalk_card_struct.py
dingtalk/ViewCardContent/: ViewCardContent.py  __init__.py
dingtalk/interface/: AbstractIM.py  IM_client.py
dingtalk/services/: apps.py  argo_workflows.py  argo_workflows_service.py  dingtalk_base.py  dingtalk_card_struct.py  dingtalk_client.py  test_argo_workflow.py  (+1 more)
dingtalk_bot/: asgi.py  settings.py  urls.py  wsgi.py
dingtalk_stream_service/: __init__.py
health/: checks.py  urls.py  views.py
logs/: djangoblog.log.2024-08-22  djangoblog.log.2024-08-23  djangoblog.log.2024-08-24  djangoblog.log.2024-08-25  djangoblog.log.2024-08-27
scripts/: run.sh  supervisord.conf
server_config/: run.sh  supervisord.conf
utils/: elapsed.py  markdown_template.py
(+21 files in other folders)
